Fixed experience title wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -84,13 +84,12 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 15%;
+    min-height: 15%;
 
     color: white;
     background-color: rgba(50,50,50,.8);
 
-    padding-left: 15px;
-    padding-top: 10px;
+    padding: 10px 15px;
 }
 
 .sidebar {
